--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,8 +5,8 @@
 }
 
 body {
-    background: rgb(200, 235, 154);
-    background: linear-gradient(0deg, rgba(200, 235, 154, 1) 0%, rgba(255, 232, 184, 1) 37%);
+    background: rgb(102, 233, 69);
+    background: linear-gradient(0deg, rgb(158, 241, 169) 0%, rgb(166, 250, 159) 37%);
     height: 100vh;
     font-family: 'Noto Sans', sans-serif;
 }
@@ -18,38 +18,38 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    background-color: #2e4919;
+    background-color: #30610b;
 }
 
 .navegacion ul {
     display: flex;
     flex-direction: row;
-    margin: 2rem 0;
+    margin: 2.5rem 0;
     list-style: none;
 }
 
 .navegacion ul li {
-    padding: 1rem;
+    padding: 3rem;
 }
 
 .navegacion ul li a {
     text-decoration: none;
-    font-size: 1rem;
+    font-size: 2rem;
     font-weight: 400;
     color: white;
     transition: all 0.3s;
 }
 
 .navegacion ul li a:hover {
-    color: #EAE509;
+    color: #000000;
     position: relative;
     top: 2px;
 }
 
 .logo img {
-    width: 10rem;
-    margin: 2rem 0;
-    max-width: 70%;
+    width: 25rem;
+    margin: 3rem 0;
+    max-width: 80%;
 }
 
 
@@ -59,9 +59,9 @@ header {
     display: flex;
     margin: 2rem 0;
     padding: 2rem 0;
-    background-color: #2e4919;
-    border-top: 2px solid #EAE509;
-    border-bottom: 2px solid #EAE509;
+    background-color: #448513;
+    border-top: 2px solid #448513;
+    border-bottom: 2px solid #5bea09;
 }
 
 .home .home_description {
@@ -72,29 +72,35 @@ header {
 }
 
 .home .imagen img {
-    max-width: 90%;
+    max-width: 70%;
+    padding-left: 30%;
 }
 
 h1 {
     font-weight: bold;
     color: white;
     text-decoration: underline;
+    font-size: 3rem;
 }
 
 h4 {
     font-family: cursive;
-    font-size: 2rem;
-    color: darkblue;
+    font-size: 4rem;
+    color: rgb(11, 43, 3);
 }
 
 h4 small {
-    font-size: 1rem;
+    font-size: 25px;
     color: white;
 }
 
 .home_description p {
     letter-spacing: 2px;
     color: white;
+    text-align: center;
+    padding-left: 20%;
+    padding-right: 20%;
+    font-size: 15px;
 }
 
 
@@ -103,20 +109,23 @@ h4 small {
 .evento {
     display: flex;
     justify-content: space-around;
-    padding: 2rem 0;
-    background-color: #2e4919;
-    border-top: 2px solid #EAE509;
-    border-bottom: 2px solid #EAE509;
+    padding: 10rem 0;
+    background-color: #448513;
+    border-top: 2px solid #9ae690;
+    border-bottom: 2px solid #9ae690;
 }
+
 
 .evento_description {
     text-align: center;
     align-self: center;
+    font-size: 25px;
 }
 
 .evento_description h2 {
     color: white;
     text-decoration: underline;
+    font-size: 25px;
 }
 
 .evento_description p {
@@ -132,9 +141,9 @@ h4 small {
     justify-content: space-around;
     margin: 2rem 0;
     padding: 2rem 0;
-    background-color: #2e4919;
-    border-top: 2px solid #EAE509;
-    border-bottom: 2px solid #EAE509;
+    background-color: #448513;
+    border-top: 2px solid #9ae690;
+    border-bottom: 2px solid #9ae690;
 }
 
 .nosotros_description {
@@ -146,6 +155,7 @@ h4 small {
 .nosotros_description p {
     letter-spacing: 2px;
     color: white;
+    font-size: 1.3rem;
 }
 
 .nosotros .imagen img {
@@ -160,9 +170,9 @@ h4 small {
     justify-content: space-around;
     margin: 2rem 0;
     padding: 2rem 0;
-    background-color: #2e4919;
-    border-top: 2px solid #EAE509;
-    border-bottom: 2px solid #EAE509;
+    background-color: #448513;
+    border-top: 2px solid #9ae690;
+    border-bottom: 2px solid #9ae690;
 }
 
 .registrarse_parrafo {
@@ -172,16 +182,18 @@ h4 small {
 .registrarse_parrafo p {
     letter-spacing: 2px;
     color: white;
-    font-size: 1rem;
+    font-size: 1.5rem;
+    text-align: center;
 }
 
 .formulario {
     text-align: center;
+    font-size: 25px;
 }
 
 .formulario h5 {
     padding: 1rem 0;
-    font-size: 20px;
+    font-size: 35px;
     color: white;
     letter-spacing: 1px;
 }
@@ -197,25 +209,27 @@ h4 small {
 }
 
 input[type="text"] {
-    height: 2rem;
-    width: 300px;
-    padding: 8px;
+    height: 2.5rem;
+    width: 400px;
+    padding: 16px;
+    font-size: 20px;
 }
 
 input[type="submit"] {
     padding: 10px 0px;
     margin: 2rem 0;
-    background-color: #dbcd51;
+    background-color: #9ae690;
     border: none;
     cursor: pointer;
     letter-spacing: 5px;
     transition: all 0.5s;
+    font-size: 25px;
 }
 
 input[type="submit"]:hover {
-    background-color: #2e4919;
+    background-color: #448513;
     color: white;
-    border: #dbcd51 solid;
+    border: #9ae690 solid;
 }
 
 
@@ -226,15 +240,18 @@ input[type="submit"]:hover {
     justify-content: space-evenly;
     margin: 2rem 0;
     padding: 2rem 0;
-    background-color: #2e4919;
-    border-top: 2px solid #EAE509;
-    border-bottom: 2px solid #EAE509;
+    background-color: #448513;
+    border-top: 2px solid #9ae690;
+    border-bottom: 2px solid #9ae690;
+    
 }
 
 .clima_description_texto {
-    background-color: #ffffc2;
+    background-color: #9ae690;
     padding: 4rem;
+    font-size: 1.3rem;
 }
+
 
 .temperatura {
     display: flex;
@@ -247,16 +264,17 @@ input[type="submit"]:hover {
 footer {
     display: flex;
     justify-content: center;
-    padding: 2rem 0;
-    background-color: #2e4919;
+    padding: 6rem 0;
+    background-color: #30610b;
     color: white;
 }
 
 footer p {
     color: white;
-    margin-left: 5px;
+    margin-left: 18px;
     text-decoration: none;
     letter-spacing: 2px;
+    font-size: 30px;
 }
 
 footer a {
@@ -264,6 +282,7 @@ footer a {
     text-decoration: none;
     margin-left: 5px;
     transition: all .5s;
+    font-size: 30px;
 }
 
 footer a:hover {
